updates to models and notebooks for running basic analyses

--- a/notebooks/BoltDemos.ipynb
+++ b/notebooks/BoltDemos.ipynb
@@ -1319,6 +1319,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "?rgb.chunk"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
