--- a/notebooks/Dataframe Tiling Code.ipynb
+++ b/notebooks/Dataframe Tiling Code.ipynb
@@ -2,24 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# standard python tools\n",
     "import numpy as np\n",
-    "from glob import glob"
+    "from glob import glob\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using a fake spark backend for processing\n",
+      "[<class 'pyqae.images.lazy.LazyImagePillowBackend'>]\n"
+     ]
+    }
+   ],
    "source": [
     "# make sure pyqae is available\n",
     "import pyqae as pq\n",
@@ -35,49 +41,43 @@
     "\n",
     "from pyqae.images import viz\n",
     "# lazy image \n",
-    "from pyqae.images.lazy import paths_to_tiled_image, DiskMappedLazyImage, backends"
+    "from pyqae.images.lazy import paths_to_tiled_image, DiskMappedLazyImage, backends\n",
+    "print(backends)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "base_path = \"/Users/mader/Dropbox/4Quant/Projects/TumorSegmentation/10092825/\"\n",
-    "little_image_list = glob(os.path.join(base_path,\"0004_t1_tse_sag_384/*.tif\"))\n",
-    "big_image_list = ['/Volumes/ExDisk/cor03639_CH2.tif']*5\n",
-    "really_big_image_list = ['/Volumes/TOSHIBA EXT/1616.tif']"
+    "base_path = os.path.join(\"..\",\"test\",\"resources\")\n",
+    "little_image_list = glob(os.path.join(base_path,\"multilayer_tif\",\"*.tif\"))\n",
+    "big_image_list = [little_image_list[-1]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(22902, 30021)\n"
+      "(120, 120)\n"
      ]
     }
    ],
    "source": [
-    "start_img = DiskMappedLazyImage(big_image_list[0], backends[1])\n",
+    "start_img = DiskMappedLazyImage(big_image_list[0], backends[0])\n",
     "print(start_img.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def create_line_break(x_tile_size, x_dim):\n",
@@ -93,10 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -112,30 +110,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[   0  276]\n",
-      "  [ 804 1005]]\n",
+      "[[[1507 1644]\n",
+      "  [ 388  582]]\n",
       "\n",
-      " [[   0  276]\n",
-      "  [1206 1407]]]\n",
-      "[[[ 600  800]\n",
-      "  [ 652  815]]\n",
+      " [[2603 2740]\n",
+      "  [ 776  970]]]\n",
+      "[[[2223 2470]\n",
+      "  [ 931 1064]]\n",
       "\n",
-      " [[1800 2000]\n",
-      "  [ 815  978]]]\n",
-      "[[[1110 1332]\n",
-      "  [ 362  543]]\n",
+      " [[ 741  988]\n",
+      "  [ 133  266]]]\n",
+      "[[[1300 1560]\n",
+      "  [ 141  282]]\n",
       "\n",
-      " [[1332 1554]\n",
-      "  [ 181  362]]]\n"
+      " [[1560 1820]\n",
+      "  [ 141  282]]]\n"
      ]
     }
    ],
@@ -150,28 +146,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Volumes/ExDisk/spark-2.0.0-bin-hadoop2.7/python/pyspark/sql/session.py:316: UserWarning: inferring schema from dict is deprecated,please use pyspark.sql.Row instead\n",
-      "  warnings.warn(\"inferring schema from dict is deprecated,\"\n"
+     "ename": "NameError",
+     "evalue": "name 'sqlContext' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-24-9619a0c8c54b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msqlContext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreateDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtile_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc_tiles\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'sqlContext' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[x_end: bigint, x_start: bigint, y_end: bigint, y_start: bigint]"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -185,9 +172,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -199,16 +184,16 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
