--- a/notebooks/Dataframe Tiling Code.ipynb
+++ b/notebooks/Dataframe Tiling Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,14 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using a fake spark backend for processing\n",
       "[<class 'pyqae.images.lazy.LazyImagePillowBackend'>]\n"
      ]
     }
@@ -47,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -110,28 +109,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[1507 1644]\n",
-      "  [ 388  582]]\n",
+      "[[[ 681  908]\n",
+      "  [1180 1298]]\n",
       "\n",
-      " [[2603 2740]\n",
-      "  [ 776  970]]]\n",
-      "[[[2223 2470]\n",
-      "  [ 931 1064]]\n",
+      " [[1362 1589]\n",
+      "  [ 708  826]]]\n",
+      "[[[1576 1773]\n",
+      "  [ 284  568]]\n",
       "\n",
-      " [[ 741  988]\n",
-      "  [ 133  266]]]\n",
-      "[[[1300 1560]\n",
-      "  [ 141  282]]\n",
+      " [[1379 1576]\n",
+      "  [ 568  852]]]\n",
+      "[[[ 708  944]\n",
+      "  [ 253  506]]\n",
       "\n",
-      " [[1560 1820]\n",
-      "  [ 141  282]]]\n"
+      " [[1652 1888]\n",
+      "  [   0  253]]]\n"
      ]
     }
    ],
@@ -146,31 +145,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sqlContext' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-24-9619a0c8c54b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msqlContext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreateDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtile_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc_tiles\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'sqlContext' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jovyan/spark-2.3.0-bin-hadoop2.7/python/pyspark/sql/session.py:340: UserWarning: inferring schema from dict is deprecated,please use pyspark.sql.Row instead\n",
+      "  warnings.warn(\"inferring schema from dict is deprecated,\"\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[x_end: bigint, x_start: bigint, y_end: bigint, y_start: bigint]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "from pyspark.sql import SQLContext\n",
+    "from pyspark import SparkContext\n",
+    "sc = SparkContext()\n",
+    "sqlContext = SQLContext(sc)\n",
     "sqlContext.createDataFrame(tile_dict(c_tiles))"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -191,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
