--- a/notebooks/Dataframe Tiling Code.ipynb
+++ b/notebooks/Dataframe Tiling Code.ipynb
@@ -21,6 +21,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "findspark could not be initialized\n",
       "[<class 'pyqae.images.lazy.LazyImagePillowBackend'>]\n"
      ]
     }
@@ -28,16 +29,7 @@
    "source": [
     "# make sure pyqae is available\n",
     "import pyqae as pq\n",
-    "    \n",
-    "# check to see if it is running on pyspark (if not use the simplespark backend)\n",
-    "try:\n",
-    "    import pyspark\n",
-    "except ImportError:\n",
-    "    print('Using a fake spark backend for processing')\n",
-    "\n",
-    "    import pyqae.simplespark as pyspark\n",
-    "    sc = pyspark.LocalSparkContext()\n",
-    "\n",
+    "import pyspark\n",
     "from pyqae.images import viz\n",
     "# lazy image \n",
     "from pyqae.images.lazy import paths_to_tiled_image, DiskMappedLazyImage, backends\n",
@@ -116,21 +108,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[ 681  908]\n",
-      "  [1180 1298]]\n",
+      "[[[2990 3196]\n",
+      "  [1134 1296]]\n",
       "\n",
-      " [[1362 1589]\n",
-      "  [ 708  826]]]\n",
-      "[[[1576 1773]\n",
-      "  [ 284  568]]\n",
+      " [[1495 1794]\n",
+      "  [1620 1782]]]\n",
+      "[[[3131 3196]\n",
+      "  [1815 1980]]\n",
       "\n",
-      " [[1379 1576]\n",
-      "  [ 568  852]]]\n",
-      "[[[ 708  944]\n",
-      "  [ 253  506]]\n",
+      " [[2626 2727]\n",
+      "  [1485 1650]]]\n",
+      "[[[2700 2925]\n",
+      "  [1480 1665]]\n",
       "\n",
-      " [[1652 1888]\n",
-      "  [   0  253]]]\n"
+      " [[3150 3196]\n",
+      "  [1295 1480]]]\n"
      ]
     }
    ],
@@ -145,14 +137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jovyan/spark-2.3.0-bin-hadoop2.7/python/pyspark/sql/session.py:340: UserWarning: inferring schema from dict is deprecated,please use pyspark.sql.Row instead\n",
+      "/srv/conda/lib/python3.6/site-packages/pyspark/sql/session.py:340: UserWarning: inferring schema from dict is deprecated,please use pyspark.sql.Row instead\n",
       "  warnings.warn(\"inferring schema from dict is deprecated,\"\n"
      ]
     },
@@ -162,7 +154,7 @@
        "DataFrame[x_end: bigint, x_start: bigint, y_end: bigint, y_start: bigint]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
